--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           composer install --no-dev --optimize-autoloader
+          php artisan ui bootstrap --auth
           php artisan config:cache
           php artisan route:cache
           php artisan view:cache
