--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,9 @@
 <IfModule mod_rewrite.c>
+    <Directory /var/www/html>
+    AllowOverride All
+    Require all granted
+    </Directory>
+
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
@@ -13,7 +18,7 @@
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
+    # RewriteRule ^ %1 [L,R=301]
 
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
