--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Build application (create zip)
         run: |
-          zip -r laravelpackCICD.zip . -x "node_modules/*" ".git/*" ".github/*" "*.env"
+          zip -r laravelpackCICD.zip . -x "node_modules/*" ".git/*" ".github/*"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
