--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
 
       # 6. Build Front-End Assets
       - name: Build Front-End Assets
-        run: npm run build
+        run: npm run dev
 
       # 7. Set permissions for Laravel storage and cache
       - name: Set Laravel permissions
@@ -101,7 +101,6 @@ jobs:
             --application-name ${{ secrets.EB_APP_NAME }} \
             --version-label $GITHUB_SHA \
             --source-bundle S3Bucket=${{ secrets.S3_BUCKET_NAME }},S3Key=laravel.zip
-
           aws elasticbeanstalk update-environment \
             --environment-name ${{ secrets.EB_ENV_NAME }} \
             --version-label $GITHUB_SHA
